--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
-<!DOCTYPE html>
-<html lang="kor">
+<!doctype html>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>WEB1-Welcome</title>
+  <title>WEB - CSS</title>
+  <meta charset="utf-8">
 </head>
 <body>
-	<h1>
-		<a href="https://web-n.github.io/web1_html_internet/index.html">WEB</a>
-	</h1>
-	<p style="margin-top: 50pixels">
-		<ol>
-			<li><a href="https://web-n.github.io/web1_html_internet/1.html">HTML</a></li>
-			<li><a href="https://web-n.github.io/web1_html_internet/2.html">CSS</a></li>
-			<li><a href="https://web-n.github.io/web1_html_internet/3.html">JavaScript</a></li>
-		</ol>
-
-		<h2>WEB</h2>
-		<p style="margin-top: 50pixels">
-			The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.[2][3] The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
-		</p>
-
-
-</body>
-</html>
+  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+  <ol>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+  </ol>
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+  </p>
+  </body>
+  </html>
